Affichage d'automaton et de rêgle Fonctionnel Plus prototype du retour de parse

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@ src/types.ml~
 src/main.ml~
 src/#main.ml~
 src/#main.ml#
+src/affichage.ml~
+src/auxiliaire.ml~
+src/auxiliaires.ml~
+.gitignore
+src/AutCellulaire
